feature: links updated;

--- a/html/extracurricular.html
+++ b/html/extracurricular.html
@@ -35,7 +35,9 @@
           <a href="/html/skill.html">Skills</a>
         </li>
         <li>
-          <a href="/html/extracurricular.html">Volunteering</a>
+          <a href="/html/extracurricular.html" class="selected"
+            >Extracurriculars</a
+          >
         </li>
       </ul>
     </nav>
@@ -53,22 +55,42 @@
           <p class="profile-name">Ahmed Ryan</p>
           <p class="profession">Software Engineer</p>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://www.cefalo.com/en/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fas fa-briefcase profile-icon"> </i>
-            <p>Cefalo Bangladesh Ltd.</p>
+            <p>Cefalo</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="mailto:bsse1011@iit.du.ac.bd"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fas fa-envelope profile-icon"> </i>
             <p>Email</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://github.com/fraxhost"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fa-brands fa-github profile-icon"> </i>
             <p>GitHub</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://www.linkedin.com/in/fraxhost/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fa-brands fa-linkedin profile-icon"> </i>
             <p>LinkedIn</p>
           </a>
@@ -84,6 +106,77 @@
       <div class="main-body">
         <br />
         <br />
+        <div class="extracurricular-title">Volunteering</div>
+
+        <ul class="extracurricular-list">
+          <li id="extracurricular-section">
+            <div class="extracurricular-position">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Advisory Committee Member
+            </div>
+            <div class="extracurricular-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              IIT Software Engineers' Community | Mar 2023 - Present
+            </div>
+
+            <div class="extracurricular-description">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              Work in Progress
+            </div>
+          </li>
+
+          <li id="extracurricular-section">
+            <div class="extracurricular-position">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              President
+            </div>
+            <div class="extracurricular-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              IIT Software Engineers' Community | Feb 2022 - Mar 2023
+            </div>
+
+            <div class="extracurricular-description">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              Work in Progress
+            </div>
+          </li>
+
+          <li id="extracurricular-section">
+            <div class="extracurricular-position">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Assistant General Secretary
+            </div>
+            <div class="extracurricular-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              IIT Software Engineers' Community | Feb 2020 - Mar 2022
+            </div>
+
+            <div class="extracurricular-description">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              Work in Progress
+            </div>
+          </li>
+
+          <li id="extracurricular-section">
+            <div class="extracurricular-position">
+              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
+              Assistant Office Secretary
+            </div>
+            <div class="extracurricular-place">
+              <!-- <i class="fa-solid fa-location-dot"></i> -->
+              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
+              IIT Software Engineers' Community | Mar 2019 - Feb 2020
+            </div>
+
+            <div class="extracurricular-description">
+              <!-- <i class="fa-solid fa-bullseye"></i> -->
+              Work in Progress
+            </div>
+          </li>
+        </ul>
       </div>
       <!-- main body section ends -->
     </main>
