--- a/html/education.html
+++ b/html/education.html
@@ -24,7 +24,7 @@
           <a href="/">About Me</a>
         </li>
         <li>
-          <a href="/html/education.html">Education</a>
+          <a href="/html/education.html" class="selected">Education</a>
         </li>
         <li>
           <a href="/html/experience.html">Experience</a>
@@ -36,7 +36,7 @@
           <a href="/html/skill.html">Skills</a>
         </li>
         <li>
-          <a href="/html/extracurricular.html">Volunteering</a>
+          <a href="/html/extracurricular.html">Extracurriculars</a>
         </li>
       </ul>
     </nav>
@@ -54,22 +54,42 @@
           <p class="profile-name">Ahmed Ryan</p>
           <p class="profession">Software Engineer</p>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://www.cefalo.com/en/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fas fa-briefcase profile-icon"> </i>
-            <p>Cefalo Bangladesh Ltd.</p>
+            <p>Cefalo</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="mailto:bsse1011@iit.du.ac.bd"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fas fa-envelope profile-icon"> </i>
             <p>Email</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://github.com/fraxhost"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fa-brands fa-github profile-icon"> </i>
             <p>GitHub</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://www.linkedin.com/in/fraxhost/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fa-brands fa-linkedin profile-icon"> </i>
             <p>LinkedIn</p>
           </a>
