--- a/html/skill.html
+++ b/html/skill.html
@@ -33,10 +33,10 @@
           <a href="/html/project.html">Projects</a>
         </li>
         <li>
-          <a href="/html/skill.html">Skills</a>
+          <a href="/html/skill.html" class="selected">Skills</a>
         </li>
         <li>
-          <a href="/html/extracurricular.html">Volunteering</a>
+          <a href="/html/extracurricular.html">Extracurriculars</a>
         </li>
       </ul>
     </nav>
@@ -54,25 +54,46 @@
           <p class="profile-name">Ahmed Ryan</p>
           <p class="profession">Software Engineer</p>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://www.cefalo.com/en/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fas fa-briefcase profile-icon"> </i>
-            <p>Cefalo Bangladesh Ltd.</p>
+            <p>Cefalo</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="mailto:bsse1011@iit.du.ac.bd"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fas fa-envelope profile-icon"> </i>
             <p>Email</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://github.com/fraxhost"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fa-brands fa-github profile-icon"> </i>
             <p>GitHub</p>
           </a>
 
-          <a class="profile-link" href="">
+          <a
+            class="profile-link"
+            href="https://www.linkedin.com/in/fraxhost/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <i class="fa-brands fa-linkedin profile-icon"> </i>
             <p>LinkedIn</p>
           </a>
+
           <button onclick="scrollToTop()" class="scroll-btn">
             <i class="fa fa-chevron-circle-up fa-xl" aria-hidden="true"></i>
           </button>
