feature: about me work in progress;

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ahmed Ryan</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/index.css" />
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png" />
     <link
       rel="stylesheet"
@@ -101,15 +103,53 @@
 
       <!-- main body section begins -->
       <div class="main-body">
-        <!-- <div>Intro</div>
-        <div>Research Interest Areas</div>
-        <ul>
-          <li>Malware Analysis and Detection Techniques</li>
-          <li>Reverse Engineering of Software and Binary Applications</li>
-          <li>Binary Analysis and Exploitation</li>
-          <li>Vulnerability Research and Exploit Development</li>
-          <li>Low-Level System Security and Threat Intelligence</li>
-        </ul> -->
+        <br />
+        <br />
+        <div class="container">
+          <div class="about-greetings">Hello!</div>
+          <div class="about-introduction">
+            I'm Ahmed Ryan, a dedicated software engineer with over 2 years of
+            professional experience in C# and .NET technologies. I completed my
+            Bachelor of Science in Software Engineering from the Institute of
+            Information Technology, University of Dhaka, with a CGPA of 3.68,
+            excelling particularly in my final semesters.
+          </div>
+
+          <div class="about-experience">
+            Throughout my career, I have had the opportunity to work with
+            renowned organizations like Cefalo Bangladesh Ltd., where I
+            contributed to various projects, ranging from in-house HR
+            applications to complex restaurant management systems. Alongside my
+            software development work, I have also honed my technical writing
+            skills, developing content for CodeMaze, a platform serving a global
+            developer audience.
+          </div>
+
+          <div class="about-research-introduction">
+            In parallel with my professional pursuits, I have a deep interest in
+            security research, particularly in:
+          </div>
+          <ul class="about-research-interests">
+            <li>Malware Analysis and Detection Techniques</li>
+            <li>Reverse Engineering of Software and Binary Applications</li>
+            <li>Binary Analysis and Exploitation</li>
+            <li>Vulnerability Research and Exploit Development</li>
+            <li>Low-Level System Security and Threat Intelligence</li>
+          </ul>
+
+          <div class="about-open-to-position">
+            Currently, I am actively seeking a PhD position for the fall of
+            2025, where I hope to further explore and contribute to the fields
+            of malware analysis, binary exploitation, and software security. I
+            am passionate about low-level system security and would love to
+            collaborate with researchers who share these interests.
+          </div>
+
+          <p class="about-contact-me">
+            Feel free to connect with me if you're interested in collaborating
+            or discussing research opportunities!
+          </p>
+        </div>
       </div>
       <!-- main body section ends -->
     </main>
