--- a/html/extracurricular.html
+++ b/html/extracurricular.html
@@ -122,7 +122,9 @@
 
             <div class="extracurricular-description">
               <!-- <i class="fa-solid fa-bullseye"></i> -->
-              Work in Progress
+              As a member of the advisory committee, my responsibilities include
+              advising the current committee and assisting in the formation of a
+              new committee when the tenure of the existing one ends.
             </div>
           </li>
 
@@ -139,7 +141,12 @@
 
             <div class="extracurricular-description">
               <!-- <i class="fa-solid fa-bullseye"></i> -->
-              Work in Progress
+              As the President of the IIT Software Engineers Community, I
+              managed the overall club operations and served as its
+              spokesperson. My tenure focused on enhancing the skills of our
+              members and IIT students by organizing workshops on hackathons,
+              programming, software engineering, and blockchain. Additionally,
+              we facilitated on-site recruitment with companies like Samsung.
             </div>
           </li>
 
@@ -156,7 +163,15 @@
 
             <div class="extracurricular-description">
               <!-- <i class="fa-solid fa-bullseye"></i> -->
-              Work in Progress
+              As the Assistant General Secretary of the IIT Software Engineers
+              Community, I assisted in managing internal affairs and contributed
+              to several key initiatives. Before COVID, I helped organize an
+              indoor games tournament for students. During the pandemic, I was
+              involved in <strong>Fight for Life</strong>, a COVID relief fund
+              initiative, and anchored <strong>IITTalks</strong>, a talk show
+              series featuring alumni. Afterward, I helped organize
+              <strong>ITVerse</strong>, the largest online IT Fest in post-COVID
+              Bangladesh.
             </div>
           </li>
 
@@ -173,7 +188,14 @@
 
             <div class="extracurricular-description">
               <!-- <i class="fa-solid fa-bullseye"></i> -->
-              Work in Progress
+              As the Assistant Office Secretary of the IIT Software Engineers
+              Community, I managed administrative duties while actively
+              contributing to key initiatives like <strong>TechCrunch</strong>,
+              a hands-on seminar for college students, and
+              <strong>TechCrunch 2.0</strong>, a program funded by the Asian
+              Development Bank to promote female participation in IT.
+              Additionally, I organized several events aimed at enhancing the
+              technical skills of IIT students.
             </div>
           </li>
         </ul>
