--- a/html/skill.html
+++ b/html/skill.html
@@ -220,8 +220,8 @@
                 Issued by TryHackMe | Sept, 2024
               </div>
               <div class="skill-subheading">
-                <p>Skills</p>
-                <p>|</p>
+                <!-- <p>Skills</p>
+                <p>|</p> -->
                 <p>
                   Kali Linux - Nmap - OWASP - Burp Suite - John the Ripper -
                   Metasploit
@@ -234,8 +234,8 @@
                 Issued by TryHackMe | Sept, 2024
               </div>
               <div class="skill-subheading">
-                <p>Skills</p>
-                <p>|</p>
+                <!-- <p>Skills</p>
+                <p>|</p> -->
                 <p>
                   Digital Forensics - Security Operations - Web Application
                   Security - Network Security
@@ -248,8 +248,8 @@
                 Issued by TryHackMe | Sept, 2024
               </div>
               <div class="skill-subheading">
-                <p>Skills</p>
-                <p>|</p>
+                <!-- <p>Skills</p>
+                <p>|</p> -->
                 <p>
                   Linux - Windows - Hypertext Transfer Protocol (HTTP) - OSI
                   Model
@@ -262,8 +262,8 @@
                 Issued by FreeCodeCamp | Sept, 2024
               </div>
               <div class="skill-subheading">
-                <p>Skills</p>
-                <p>|</p>
+                <!-- <p>Skills</p>
+                <p>|</p> -->
                 <p>
                   HTML5 - Cascading Style Sheets (CSS) - Responsive Web Design
                 </p>
@@ -275,8 +275,8 @@
                 Issued by FreeCodeCamp | Sept, 2024
               </div>
               <div class="skill-subheading">
-                <p>Skills</p>
-                <p>|</p>
+                <!-- <p>Skills</p>
+                <p>|</p> -->
                 <p>C#</p>
               </div>
             </li>
