--- a/index.html
+++ b/index.html
@@ -106,48 +106,56 @@
         <br />
         <br />
         <div class="container">
-          <div class="about-greetings">Hello!</div>
+          <div class="about-greetings">Greetings!</div>
           <div class="about-introduction">
-            I'm Ahmed Ryan, a dedicated software engineer with over 2 years of
-            professional experience in C# and .NET technologies. I completed my
-            Bachelor of Science in Software Engineering from the Institute of
-            Information Technology, University of Dhaka, with a CGPA of 3.68,
-            excelling particularly in my final semesters.
+            I’m <strong>Ahmed Ryan</strong>, a dedicated
+            <strong>Software Engineer</strong> with around
+            <strong>3 years of experience</strong> in software development,
+            particularly in the <strong>web domain</strong>. I graduated with a
+            <strong>Bachelor’s degree in Software Engineering</strong> from the
+            <strong
+              >Institute of Information Technology, University of Dhaka</strong
+            >, recognized as a leading institution for Software Engineering in
+            Bangladesh. My interests lie in applying
+            <strong>security research</strong> to enhance and automate software
+            engineering tasks, including <strong>malware analysis</strong>,
+            <strong>binary exploitation</strong>, and
+            <strong>software testing</strong>.
           </div>
 
           <div class="about-experience">
-            Throughout my career, I have had the opportunity to work with
-            renowned organizations like Cefalo Bangladesh Ltd., where I
-            contributed to various projects, ranging from in-house HR
-            applications to complex restaurant management systems. Alongside my
-            software development work, I have also honed my technical writing
-            skills, developing content for CodeMaze, a platform serving a global
-            developer audience.
+            I actively collaborated on a project during my final year at
+            university, where I worked on a
+            <strong>research tool for automatic testing of web APIs</strong>
+            using <strong>black box techniques</strong>. Currently, I am working
+            on another research project titled
+            <strong
+              >"Automated Community Smell Detection Using In-Context Learning
+              Capabilities of GPT"</strong
+            >
+            to further enhance my research skills. This blend of
+            <strong>industry and research experience</strong> has equipped me
+            with the ability to <strong>bridge theory and practice</strong>,
+            fueling my passion for the field. I am now actively seeking a
+            <strong>PhD position in Software Security</strong> for
+            <strong>Fall ‘25</strong>.
           </div>
 
           <div class="about-research-introduction">
-            In parallel with my professional pursuits, I have a deep interest in
-            security research, particularly in:
+            Research Interest Areas:
           </div>
           <ul class="about-research-interests">
             <li>Malware Analysis and Detection Techniques</li>
             <li>Reverse Engineering of Software and Binary Applications</li>
             <li>Binary Analysis and Exploitation</li>
             <li>Vulnerability Research and Exploit Development</li>
-            <li>Low-Level System Security and Threat Intelligence</li>
+            <li>Software Test Automation</li>
           </ul>
 
-          <div class="about-open-to-position">
-            Currently, I am actively seeking a PhD position for the fall of
-            2025, where I hope to further explore and contribute to the fields
-            of malware analysis, binary exploitation, and software security. I
-            am passionate about low-level system security and would love to
-            collaborate with researchers who share these interests.
-          </div>
-
           <p class="about-contact-me">
-            Feel free to connect with me if you're interested in collaborating
-            or discussing research opportunities!
+            Feel free to <strong>connect with me</strong> if you're interested
+            in <strong>collaborating</strong> or discussing
+            <strong>research opportunities</strong>!
           </p>
         </div>
       </div>
