feature: experience updated;

--- a/html/experience.html
+++ b/html/experience.html
@@ -117,7 +117,12 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              <a href="https://www.cefalo.com/">Cefalo Bangladesh Ltd.</a>
+              <a
+                href="https://www.cefalo.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Cefalo Bangladesh Ltd.</a
+              >
               &nbsp; | July 2024 - Present
             </div>
 
@@ -145,7 +150,12 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              <a href="https://www.cefalo.com/">Cefalo Bangladesh Ltd.</a>
+              <a
+                href="https://www.cefalo.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Cefalo Bangladesh Ltd.</a
+              >
               &nbsp; | Jan 2023 - June 2024
             </div>
 
@@ -178,7 +188,12 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              <a href="https://www.cefalo.com/">Cefalo Bangladesh Ltd.</a>
+              <a
+                href="https://www.cefalo.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Cefalo Bangladesh Ltd.</a
+              >
               &nbsp; | Jan 2022 - Dec 2022
             </div>
 
@@ -210,8 +225,13 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              <a href="https://code-maze.com/">Code Maze</a> &nbsp; | May 2023 -
-              Oct 2023
+              <a
+                href="https://code-maze.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Code Maze</a
+              >
+              &nbsp; | May 2023 - Oct 2023
             </div>
 
             <div class="experience-details">
@@ -246,7 +266,13 @@
             <div class="experience-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Intelligent Systems and HCI Research Group | June 2024 - Present
+              <a
+                href="https://sites.google.com/view/ishci/about-us"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Intelligent Systems and HCI Research Group</a
+              >
+              &nbsp; | June 2024 - Present
             </div>
 
             <div class="experience-details">
