feature: made mobile responsive;

--- a/html/skill.html
+++ b/html/skill.html
@@ -19,7 +19,8 @@
   <body>
     <!-- navbar begins -->
     <nav>
-      <ul>
+      <div class="page-name">Skills</div>
+      <ul class="nav-links">
         <li>
           <a href="/">About Me</a>
         </li>
@@ -39,67 +40,76 @@
           <a href="/html/extracurricular.html">Extracurriculars</a>
         </li>
       </ul>
+      <div class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </nav>
     <!-- navbar ends -->
 
     <main>
-      <!-- sidebar section begins -->
+      <!-- sidebar begins -->
       <div class="side-bar">
         <div class="profile">
-          <img
-            class="profile-img"
-            src="/assets/images/ryan.jpg"
-            alt="Ryan's Photo"
-          />
-          <p class="profile-name">Ahmed Ryan</p>
-          <p class="profession">Software Engineer</p>
+          <div class="profile-info">
+            <img
+              class="profile-img"
+              src="/assets/images/ryan.jpg"
+              alt="Ryan's Photo"
+            />
+            <p class="profile-name">Ahmed Ryan</p>
+            <p class="profession">Software Engineer</p>
+          </div>
 
-          <a
-            class="profile-link"
-            href="https://www.cefalo.com/en/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fas fa-briefcase profile-icon"> </i>
-            <p>Cefalo</p>
-          </a>
+          <div class="profile-links">
+            <a
+              class="profile-link"
+              href="https://www.cefalo.com/en/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fas fa-briefcase profile-icon"> </i>
+              <p>Cefalo</p>
+            </a>
 
-          <a
-            class="profile-link"
-            href="mailto:bsse1011@iit.du.ac.bd"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fas fa-envelope profile-icon"> </i>
-            <p>Email</p>
-          </a>
+            <a
+              class="profile-link"
+              href="mailto:bsse1011@iit.du.ac.bd"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fas fa-envelope profile-icon"> </i>
+              <p>Email</p>
+            </a>
 
-          <a
-            class="profile-link"
-            href="https://github.com/fraxhost"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fa-brands fa-github profile-icon"> </i>
-            <p>GitHub</p>
-          </a>
+            <a
+              class="profile-link"
+              href="https://github.com/fraxhost"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fa-brands fa-github profile-icon"> </i>
+              <p>GitHub</p>
+            </a>
 
-          <a
-            class="profile-link"
-            href="https://www.linkedin.com/in/fraxhost/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fa-brands fa-linkedin profile-icon"> </i>
-            <p>LinkedIn</p>
-          </a>
+            <a
+              class="profile-link"
+              href="https://www.linkedin.com/in/fraxhost/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fa-brands fa-linkedin profile-icon"> </i>
+              <p>LinkedIn</p>
+            </a>
+          </div>
 
           <button onclick="scrollToTop()" class="scroll-btn">
             <i class="fa fa-chevron-circle-up fa-xl" aria-hidden="true"></i>
           </button>
         </div>
       </div>
-      <!-- sidebar section ends -->
+      <!-- sidebar ends -->
 
       <!-- main body section begins -->
       <div class="main-body">
