feature: research interests updated;

--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
             Research Interest Areas:
           </div>
           <ul class="about-research-interests">
+            <li>Automated Security Testing</li>
             <li>Malware Analysis and Detection Techniques</li>
-            <li>Reverse Engineering of Software and Binary Applications</li>
+            <li>Reverse Engineering</li>
             <li>Binary Analysis and Exploitation</li>
             <li>Vulnerability Research and Exploit Development</li>
-            <li>Software Test Automation</li>
           </ul>
 
           <p class="about-contact-me">
