feature: information updated;

--- a/html/education.html
+++ b/html/education.html
@@ -126,8 +126,8 @@
             <div class="education-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Institute of Information Technology, University of Dhaka | 2018 -
-              2022
+              <p>Institute of Information Technology, University of Dhaka</p>
+              <p class="education-date">2018 - 2022</p>
             </div>
 
             <div class="education-grade">
@@ -160,7 +160,8 @@
             <div class="education-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Notre Dame College, Dhaka | 2017
+              <p>Notre Dame College, Dhaka</p>
+              <p class="education-date">2017</p>
             </div>
 
             <div class="education-grade">
@@ -177,7 +178,8 @@
             <div class="education-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Military Collegiate School, Khulna | 2015
+              <p>Military Collegiate School, Khulna</p>
+              <p class="education-date">2015</p>
             </div>
 
             <div class="education-grade">
@@ -194,7 +196,8 @@
             <div class="education-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              Military Collegiate School, Khulna | 2012
+              <p>Military Collegiate School, Khulna</p>
+              <p class="education-date">2012</p>
             </div>
 
             <div class="education-grade">
