--- a/html/experience.html
+++ b/html/experience.html
@@ -125,19 +125,17 @@
             </div>
 
             <div class="experience-place">
-              <!-- <i class="fa-solid fa-location-dot"></i> -->
-              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
               <a
                 href="https://www.cefalo.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Cefalo Bangladesh Ltd.</a
               >
-              &nbsp; | July 2024 - Present
+              <p class="experience-date">July 2024 - Present</p>
             </div>
 
             <div class="experience-details">
-              <p>ASP.NET MVC - Vue.js - CSS - SignalR</p>
+              <p>ASP.NET MVC | Vue.js | CSS | SignalR</p>
             </div>
 
             <div class="experience-details">
@@ -166,12 +164,12 @@
                 rel="noopener noreferrer"
                 >Cefalo Bangladesh Ltd.</a
               >
-              &nbsp; | Jan 2023 - June 2024
+              <p class="experience-date">Jan 2023 - June 2024</p>
             </div>
 
             <div class="experience-details">
               <p>
-                C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript -
+                C# | ASP.NET Core | EF Core | MSSQL | HTML | JavaScript |
                 React.js
               </p>
             </div>
@@ -204,12 +202,12 @@
                 rel="noopener noreferrer"
                 >Cefalo Bangladesh Ltd.</a
               >
-              &nbsp; | Jan 2022 - Dec 2022
+              <p class="experience-date">Jan 2022 - Dec 2022</p>
             </div>
 
             <div class="experience-details">
               <p>
-                C# - ASP.NET Core - EF Core - MSSQL - HTML - JavaScript -
+                C# | ASP.NET Core | EF Core | MSSQL | HTML | JavaScript |
                 React.js
               </p>
             </div>
@@ -241,11 +239,11 @@
                 rel="noopener noreferrer"
                 >Code Maze</a
               >
-              &nbsp; | May 2023 - Oct 2023
+              <p class="experience-date">May 2023 - Oct 2023</p>
             </div>
 
             <div class="experience-details">
-              <p>Technical Writing - C# - .NET</p>
+              <p>Technical Writing | C# | .NET</p>
             </div>
 
             <div class="experience-details">
@@ -282,7 +280,7 @@
                 rel="noopener noreferrer"
                 >Intelligent Systems and HCI Research Group</a
               >
-              &nbsp; | June 2024 - Present
+              <p class="experience-date">June 2024 - Present</p>
             </div>
 
             <div class="experience-details">
