--- a/html/skill.html
+++ b/html/skill.html
@@ -227,13 +227,14 @@
             <li>
               <div class="skill-heading">Complete Beginner</div>
               <div class="skill-organization">
-                Issued by TryHackMe | Sept, 2024
+                <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
+                <p class="skill-date">Sept, 2024</p>
               </div>
               <div class="skill-subheading">
                 <!-- <p>Skills</p>
                 <p>|</p> -->
                 <p>
-                  Kali Linux - Nmap - OWASP - Burp Suite - John the Ripper -
+                  Kali Linux | Nmap | OWASP | Burp Suite | John the Ripper |
                   Metasploit
                 </p>
               </div>
@@ -241,27 +242,29 @@
             <li>
               <div class="skill-heading">Introduction to Cyber Security</div>
               <div class="skill-organization">
-                Issued by TryHackMe | Sept, 2024
+                <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
+                <p class="skill-date">Sept, 2024</p>
               </div>
               <div class="skill-subheading">
                 <!-- <p>Skills</p>
                 <p>|</p> -->
                 <p>
-                  Digital Forensics - Security Operations - Web Application
-                  Security - Network Security
+                  Digital Forensics | Security Operations | Web Application
+                  Security | Network Security
                 </p>
               </div>
             </li>
             <li>
               <div class="skill-heading">Pre Security</div>
               <div class="skill-organization">
-                Issued by TryHackMe | Sept, 2024
+                <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
+                <p class="skill-date">Sept, 2024</p>
               </div>
               <div class="skill-subheading">
                 <!-- <p>Skills</p>
                 <p>|</p> -->
                 <p>
-                  Linux - Windows - Hypertext Transfer Protocol (HTTP) - OSI
+                  Linux | Windows | Hypertext Transfer Protocol (HTTP) | OSI
                   Model
                 </p>
               </div>
@@ -269,20 +272,28 @@
             <li>
               <div class="skill-heading">Responsive Web Design</div>
               <div class="skill-organization">
-                Issued by FreeCodeCamp | Sept, 2024
+                <p>
+                  Issued by
+                  <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>
+                </p>
+                <p class="skill-date">Oct, 2023</p>
               </div>
               <div class="skill-subheading">
                 <!-- <p>Skills</p>
                 <p>|</p> -->
                 <p>
-                  HTML5 - Cascading Style Sheets (CSS) - Responsive Web Design
+                  HTML5 | Cascading Style Sheets (CSS) | Responsive Web Design
                 </p>
               </div>
             </li>
             <li>
               <div class="skill-heading">Foundational C# With Microsoft</div>
               <div class="skill-organization">
-                Issued by FreeCodeCamp | Sept, 2024
+                <p>
+                  Issued by
+                  <a href="https://www.freecodecamp.org/">FreeCodeCamp</a>
+                </p>
+                <p class="skill-date">Sept, 2023</p>
               </div>
               <div class="skill-subheading">
                 <!-- <p>Skills</p>
@@ -319,12 +330,13 @@
             <li>
               <div class="skill-heading">IELTS</div>
               <div class="skill-organization">
-                IELTS Academic | 1st Sep, 2024
+                <p>IELTS Academic</p>
+                <p class="skill-date">1st Sep, 2024</p>
               </div>
               <div class="skill-subheading">
+                <p>Overall - 8.0</p>
                 <p>
-                  Overall - 8.0 ( Listening - 7.5 | Reading - 9.0 | Writing -
-                  7.5 | Speaking - 7.0 )
+                  Listening: 7.5 | Reading: 9.0 | Writing: 7.5 | Speaking: 7.0
                 </p>
               </div>
             </li>
