--- a/index.html
+++ b/index.html
@@ -126,27 +126,36 @@
             <strong
               >Institute of Information Technology, University of Dhaka</strong
             >, recognized as a leading institution for Software Engineering in
-            Bangladesh. My interests lie in applying
-            <strong>security research</strong> to enhance and automate software
-            engineering tasks, including <strong>malware analysis</strong>,
-            <strong>binary exploitation</strong>, and
-            <strong>software testing</strong>.
+            Bangladesh. My research interests include
+            <strong>security test automation</strong>,
+            <strong>malware analysis</strong>, and
+            <strong>exploit development</strong> to enhance software security,
+            inspired by my final year project and industry experience.
           </div>
 
           <div class="about-experience">
-            I actively collaborated on a project during my final year at
-            university, where I worked on a
-            <strong>research tool for automatic testing of web APIs</strong>
-            using <strong>black box techniques</strong>. Currently, I am working
-            on another research project titled
-            <strong
-              >"Automated Community Smell Detection Using In-Context Learning
-              Capabilities of GPT"</strong
-            >
-            to further enhance my research skills. This blend of
-            <strong>industry and research experience</strong> has equipped me
-            with the ability to <strong>bridge theory and practice</strong>,
-            fueling my passion for the field. I am now actively seeking a
+            In 2020, I participated in a national CTF competition where my team
+            achieved <strong>20th place out of 234</strong>, which sparked my
+            interest in software security. In addition, I completed an
+            internship in my 7th semester, focusing on an in-house HR portal
+            where I emphasized <strong>secure software development</strong> by
+            applying <strong>OWASP standards</strong> to protect APIs from
+            external threats and identify and mitigate potential
+            vulnerabilities. These foundational experiences led to my final
+            semester project, where I implemented a tool based on a research
+            paper for <strong>automating web API testing</strong>. Currently, I
+            develop <strong>secure web-based software solutions</strong> for
+            European clients and continue to expand my security knowledge
+            through several <strong>certifications</strong>.
+          </div>
+          <div class="about-experience">
+            Furthermore, I am researching how to apply
+            <strong>in-context learning capabilities</strong> of AI models to
+            improve the automated detection of community smells in software
+            under <strong>Intelligent Systems and HCI Research Group</strong>,
+            further enhancing my research skills. This combination of industry
+            and research experience has equipped me to effectively bridge theory
+            and practice, and I am now actively seeking a
             <strong>PhD position in Software Security</strong> for
             <strong>Fall ‘25</strong>.
           </div>
@@ -155,10 +164,8 @@
             Research Interest Areas:
           </div>
           <ul class="about-research-interests">
-            <li>Automated Security Testing</li>
+            <li>Security Test Automation</li>
             <li>Malware Analysis and Detection Techniques</li>
-            <li>Reverse Engineering</li>
-            <li>Binary Analysis and Exploitation</li>
             <li>Vulnerability Research and Exploit Development</li>
           </ul>
 
