--- a/html/extracurricular.html
+++ b/html/extracurricular.html
@@ -121,17 +121,14 @@
         <ul class="extracurricular-list">
           <li id="extracurricular-section">
             <div class="extracurricular-position">
-              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
               Advisory Committee Member
             </div>
             <div class="extracurricular-place">
-              <!-- <i class="fa-solid fa-location-dot"></i> -->
-              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              IIT Software Engineers' Community | Mar 2023 - Present
+              <p>IIT Software Engineers' Community</p>
+              <p class="extracurricular-date">Mar 2023 - Present</p>
             </div>
 
             <div class="extracurricular-description">
-              <!-- <i class="fa-solid fa-bullseye"></i> -->
               As a member of the advisory committee, my responsibilities include
               advising the current committee and assisting in the formation of a
               new committee when the tenure of the existing one ends.
@@ -139,18 +136,13 @@
           </li>
 
           <li id="extracurricular-section">
-            <div class="extracurricular-position">
-              <!-- <i class="fa-solid fa-graduation-cap"></i> -->
-              President
-            </div>
+            <div class="extracurricular-position">President</div>
             <div class="extracurricular-place">
-              <!-- <i class="fa-solid fa-location-dot"></i> -->
-              <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              IIT Software Engineers' Community | Feb 2022 - Mar 2023
+              <p>IIT Software Engineers' Community</p>
+              <p class="extracurricular-date">Feb 2022 - Mar 2023</p>
             </div>
 
             <div class="extracurricular-description">
-              <!-- <i class="fa-solid fa-bullseye"></i> -->
               As the President of the IIT Software Engineers Community, I
               managed the overall club operations and served as its
               spokesperson. My tenure focused on enhancing the skills of our
@@ -168,7 +160,8 @@
             <div class="extracurricular-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              IIT Software Engineers' Community | Feb 2020 - Mar 2022
+              <p>IIT Software Engineers' Community</p>
+              <p class="extracurricular-date">Feb 2020 - Mar 2022</p>
             </div>
 
             <div class="extracurricular-description">
@@ -193,7 +186,8 @@
             <div class="extracurricular-place">
               <!-- <i class="fa-solid fa-location-dot"></i> -->
               <!-- <i class="fa-solid fa-map-location-dot"></i> -->
-              IIT Software Engineers' Community | Mar 2019 - Feb 2020
+              <p>IIT Software Engineers' Community</p>
+              <p class="extracurricular-date">Mar 2019 - Feb 2020</p>
             </div>
 
             <div class="extracurricular-description">
